@@ -87,27 +87,45 @@ class PluginsModelPlugins extends JModelList
 	 */
 	protected function _getList($query, $limitstart=0, $limit=0)
 	{
-		$this->_db->setQuery($query);
-		$result = $this->_db->loadObjectList();
+		$ordering = $this->getState('list.ordering', 'ordering');
+		if ($ordering == 'name') {
+			$this->_db->setQuery($query);
+			$result = $this->_db->loadObjectList();
+			$this->_translate($result);
+			JArrayHelper::sortObjects($result,'name', $this->getState('list.direction') == 'desc' ? -1 : 1);
+			return array_slice($result, $limitstart, $limit ? $limit : null);
+		}
+		else {
+			if ($ordering == 'ordering') {
+				$query->order('folder ASC');
+			}
+			elseif($ordering == 'folder') {
+				$query->order('ordering ASC');
+			}
+			$query->order($this->_db->nameQuote($ordering) . ' ' . $this->getState('list.direction'));
+			$result = parent::_getList($query, $limitstart, $limit);
+			$this->_translate($result);
+			return $result;
+		}
+	}
+	/**
+	 * Translate a list of objects
+	 *
+	 * @param	array The array of objects
+	 * @return	array The array of translated objects
+	 */
+	private function _translate(&$items)
+	{
 		$lang = JFactory::getLanguage();
-		foreach($result as $i=>$item) {
+		foreach($items as &$item) {
 			$source = JPATH_PLUGINS . '/' . $item->folder . '/' . $item->element;
 			$extension = 'plg_' . $item->folder . '_' . $item->element;
 				$lang->load($extension . '.sys', JPATH_ADMINISTRATOR, null, false, false)
 			||	$lang->load($extension . '.sys', $source, null, false, false)
 			||	$lang->load($extension . '.sys', JPATH_ADMINISTRATOR, $lang->getDefault(), false, false)
 			||	$lang->load($extension . '.sys', $source, $lang->getDefault(), false, false);
-			$result[$i]->name = JText::_($item->name);
+			$item->name = JText::_($item->name);
 		}
-
-		if($this->getState('list.ordering', 'ordering') == 'ordering') {
-			JArrayHelper::sortObjects($result,array('folder','ordering'), array(1, $this->getState('list.direction') == 'desc' ? -1 : 1));
-		}
-		else {
-			JArrayHelper::sortObjects($result,$this->getState('list.ordering', 'ordering'), $this->getState('list.direction') == 'desc' ? -1 : 1);
-		}
-
-		return array_slice($result, $limitstart, $limit ? $limit : null);
 	}
 	/**
 	 * Build an SQL query to load the list data.
@@ -169,7 +187,6 @@ class PluginsModelPlugins extends JModelList
 			}
 		}
 
-		
 		return $query;
 	}
 }
