@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+19-Apr-2010 Christophe Demko
+^ Speeding up modules and plugins view
+
 19-Apr-2010 Jean-Marie Simonet
 ^ Changing JText::__ to JText::plural
 $ Toolbar change to Publish/Unpublish in com_modules
